refactor payments
