# src/main/java/cl/tenpo/utility/payments/transaction/TransactionRequest.java
@@ -1,23 +1,22 @@
 package cl.tenpo.utility.payments.transaction;
 
 import java.util.List;
+import java.util.UUID;
 
-import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.NotNull;
-import javax.validation.constraints.Pattern;
 import javax.validation.constraints.Size;
 
 public class TransactionRequest
 {
 	@NotNull
 	@Size(min = 1, max = 15)
-	private List<@NotBlank @Pattern(regexp = "[a-f0-9\\-]{36}")String> bills;
+	private List<@NotNull UUID> bills;
 
-	public List<String> getBills() {
+	public List<UUID> getBills() {
 		return bills;
 	}
 
-	public void setBills(final List<String> bills) {
+	public void setBills(final List<UUID> bills) {
 		this.bills = bills;
 	}
 }
